--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Tamalckb531/ws-project#readme",
   "dependencies": {
+    "express": "^5.2.1",
     "ws": "^8.19.0"
   }
 }
